package transmuter;

public interface Aggregate {
  Iterator iterator();
}
