package transmuter;

public interface Iterator {
  boolean hasNext();

  Object next();
}
